<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_background"
    tools:context=".activity.MainActivity">

    <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/app_name"
            android:textColor="@color/brightBlue"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

    <EditText
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/login_string"
            android:backgroundTint="@color/brightBlue"
            android:ems="10"
            android:hint="@string/login_string"
            android:inputType="textPersonName"
            android:nextFocusDown="@id/password"
            android:selectAllOnFocus="true"
            android:textColor="@color/brightBlue"
            android:textColorHint="@drawable/hide_hint"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/password_string"
        android:backgroundTint="@color/brightBlue"
        android:ems="10"
        android:hint="@string/password_string"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/brightBlue"
        android:textColorHint="@drawable/hide_hint"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/blue"
        android:onClick="login"
        android:text="@string/login_button"
        android:textColor="@color/brightBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />
    <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/error" android:layout_marginEnd="24dp" android:layout_marginStart="24dp"
            android:textSize="20sp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="40dp" app:layout_constraintBottom_toTopOf="@+id/textView"
            android:textAlignment="center"/>
</android.support.constraint.ConstraintLayout>