<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.AttendanceActivity">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    >
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        >

            <TextView
                    android:id="@+id/greeting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:text="@string/greeting_string"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
            />

        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.AppBarLayout>



    <TextView
            android:id="@+id/attendance_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attendances_string"
            android:textSize="22sp"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar"
    />

    <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/attendance_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/check_attendance"/>

    <Button
            android:id="@+id/check_attendance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_qr_button"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:onClick="openScan"
            android:background="@color/blue"
            android:textColor="@color/brightBlue"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    />

</android.support.constraint.ConstraintLayout>